# Generated by Django 5.0.4 on 2026-05-12 13:21

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0003_producto_alter_privacypolicy_id_alter_usuario_id'),
    ]

    operations = [
        migrations.AddField(
            model_name='producto',
            name='aplica_impuesto',
            field=models.BooleanField(default=True, verbose_name='¿Aplica Impuesto?'),
        ),
        migrations.AddField(
            model_name='producto',
            name='categoria',
            field=models.CharField(choices=[('AGRICOLA', 'Agrícola'), ('INSTITUCIONAL', 'Institucional'), ('TECNOLOGICO', 'Tecnológico'), ('ACADEMICO', 'Académico'), ('TEXTIL', 'Textil'), ('SOUVENIR', 'Souvenir'), ('TEMPORAL', 'Temporal')], default='SOUVENIR', max_length=20, verbose_name='Categoría'),
        ),
        migrations.AddField(
            model_name='producto',
            name='codigo',
            field=models.CharField(blank=True, max_length=20, null=True, unique=True, verbose_name='Código'),
        ),
        migrations.AddField(
            model_name='producto',
            name='is_activo',
            field=models.BooleanField(default=True, verbose_name='¿Está Activo?'),
        ),
        migrations.AddField(
            model_name='producto',
            name='medida',
            field=models.CharField(choices=[('GRAMO', 'Gramo'), ('KILOGRAMO', 'Kilogramo'), ('LIBRA', 'Libra'), ('UNIDAD', 'Unidad')], default='UNIDAD', max_length=15, verbose_name='Medida'),
        ),
        migrations.AddField(
            model_name='producto',
            name='vencimiento',
            field=models.DateField(blank=True, null=True, verbose_name='Fecha de Vencimiento'),
        ),
        migrations.AddField(
            model_name='usuario',
            name='direccion',
            field=models.TextField(blank=True, verbose_name='Dirección'),
        ),
        migrations.AddField(
            model_name='usuario',
            name='identificacion',
            field=models.CharField(blank=True, max_length=20, verbose_name='Identificación'),
        ),
        migrations.AddField(
            model_name='usuario',
            name='is_universidad',
            field=models.BooleanField(default=False, verbose_name='¿Es de la Universidad?'),
        ),
        migrations.AddField(
            model_name='usuario',
            name='rol',
            field=models.CharField(choices=[('ADMIN', 'Administrador'), ('CLIENTE', 'Cliente'), ('CAJERO', 'Cajero'), ('BODEGUERO', 'Bodeguero'), ('GERENTE', 'Gerente'), ('SUPERVISOR', 'Supervisor')], default='CLIENTE', max_length=15, verbose_name='Rol'),
        ),
        migrations.AddField(
            model_name='usuario',
            name='telefono',
            field=models.CharField(blank=True, max_length=20, verbose_name='Teléfono'),
        ),
        migrations.AlterField(
            model_name='usuario',
            name='privacy_policy',
            field=models.ForeignKey(blank=True, help_text='The privacy policy version accepted', null=True, on_delete=django.db.models.deletion.PROTECT, related_name='usuarios', to='tienda.privacypolicy'),
        ),
        migrations.CreateModel(
            name='Caja',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_abre', models.DateTimeField(auto_now_add=True)),
                ('fecha_cierra', models.DateTimeField(blank=True, null=True)),
                ('saldo_abre', models.DecimalField(decimal_places=2, max_digits=10)),
                ('saldo_cierra', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('cajero', models.ForeignKey(limit_choices_to={'rol': 'CAJERO'}, on_delete=django.db.models.deletion.RESTRICT, related_name='cajas_gestionadas', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Pedido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('estado', models.CharField(choices=[('RECIBIDO', 'Recibido'), ('PREPARACION', 'En Preparación'), ('LISTO', 'Listo'), ('ENTREGADO', 'Entregado'), ('CANCELADO', 'Cancelado'), ('DEVOLUCION', 'Devolución')], default='RECIBIDO', max_length=20)),
                ('tipo_entrega', models.CharField(choices=[('TIENDA', 'Tienda'), ('DOMICILIO', 'Domicilio')], default='TIENDA', max_length=15)),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.RESTRICT, related_name='pedidos', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Promocion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('is_use', models.BooleanField(default=True)),
                ('productos', models.ManyToManyField(related_name='promociones', to='tienda.producto')),
            ],
        ),
        migrations.CreateModel(
            name='Venta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha', models.DateTimeField(auto_now_add=True)),
                ('subtotal', models.DecimalField(decimal_places=2, default=0.0, max_digits=10)),
                ('metodo_pago', models.CharField(choices=[('EFECTIVO', 'Efectivo'), ('TRANSFERENCIA', 'Transferencia'), ('DEBITO', 'Débito'), ('CREDITO', 'Crédito')], default='EFECTIVO', max_length=20)),
                ('cajero', models.ForeignKey(limit_choices_to={'rol': 'CAJERO'}, on_delete=django.db.models.deletion.RESTRICT, related_name='ventas_registradas', to=settings.AUTH_USER_MODEL)),
                ('pedido', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='venta', to='tienda.pedido')),
            ],
        ),
        migrations.CreateModel(
            name='DetalleVenta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.CharField(blank=True, max_length=255)),
                ('cantidad', models.IntegerField(default=1)),
                ('precio_unitario', models.DecimalField(decimal_places=2, max_digits=10)),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='tienda.producto')),
                ('venta', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='detalles', to='tienda.venta')),
            ],
        ),
    ]
